// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error slot 1`] = `
<div role="feed" class="van-list">
  <div class="van-list__error-text">Custom Error</div>
  <div class="van-list__placeholder"></div>
</div>
`;

exports[`finished slot 1`] = `
<div role="feed" class="van-list">
  <div class="van-list__finished-text">Custom Finished</div>
  <div class="van-list__placeholder"></div>
</div>
`;
